-Renamed zombie farmer to farmbie